[package]
name = "vpn-lan-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpn_lan_proxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
if-addrs = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
url = "2"
